src/snapshots/afrotd__parser__tests__interpreation_html_9.3.3_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.3.3.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            A2 berührt mit seinen Händen den Rücken von B2, als sich dieser
            umdreht, um dem Block von A2 zu entgehen. A2 lässt seine Hände auf
            B2’s Rücken, als dieser sich vorwärtsbewegt, um den Passer zu
            erreichen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legaler Block.
            </p>
        </details>
    </div>
</article>
