src/snapshots/afrotd__parser__tests__interpreation_html_9.3.3_8.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.3.3.VIII
        </p>
    </div>
    <div class="message-body">
        <p>
            A1, der sich in, jenseits oder hinter der neutralen Zone befindet,
            berührt einen Gegner mit den offenen Händen oder mit geschlossenen
            oder gewölbten Händen, wobei die Handflächen aber nicht zum Gegner
            zeigen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legales Benutzen der Hände.
            </p>
        </details>
    </div>
</article>
