src/snapshots/afrotd__parser__tests__interpreation_html_9.3.4_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.3.4.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Bevor ein legaler Vorwärtspass, der die neutrale Zone überquert,
            geworfen wird, hält Team B den berechtigten A1 fest, der sich
            jenseits der neutralen Zone befindet.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B-Foul, Halten. Strafe – 10 Meter und automatisch First
                Down. Previous Spot Strafdurchführung.
            </p>
        </details>
    </div>
</article>
