src/snapshots/afrotd__parser__tests__interpreation_html_9.3.4_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.3.4.III
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und 12 von der A-35. Team A stellt sich in einer Scrimmage Kick
            Formation auf und beabsichtigt zu punten. Unmittelbar nach dem Snap
            ergreift B55 den RT A77 und zieht ihn zur Seite, damit B21 durch
            die so entstandene Lücke stürmen kann, um den Punt zu blocken. Der
            Kicker kann den Kick durchführen und der Ball wird an der B-35
            dead.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Halten durch B55. Das Foul ereignete sich vor dem Kick und die
                Strafe unterliegt nicht den Voraussetzungen des Post Scrimmage
                Kick Enforcements. Die 10-Meterstrafe wird vom Previous Spot
                durchgeführt und beinhaltet einen automatischen First Down.
                Team A’s Ball, 1. und 10 von der A-45.
            </p>
        </details>
    </div>
</article>
