src/snapshots/afrotd__parser__tests__interpreation_html_9.3.4_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.3.4.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und 12 von der A-35. Team A stellt sich in einer Scrimmage Kick
            Formation auf, wobei sich A88 ganz außen, auf der rechten Seite der
            Formation aufgestellt hat. Mit dem Snap stößt B21 A88 zurück und
            hält ihn dann fest, als dieser versucht, während des Kicks an B21
            vorbeizulaufen. Der Punt wird an der B-35 dead.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Die Strafe für das Halten wird durch Post Scrimmage Kick
                Enforcement geregelt und der Post Scrimmage Kick Spot dient als
                Basic Spot für die Strafdurchführung. Die 10-Meterstrafe wird
                vom Ende des Kicks durchgeführt. Team B’s Ball, 1. und 10 von
                der B-25.
            </p>
        </details>
    </div>
</article>
