src/snapshots/afrotd__parser__tests__interpreation_html_9.4.1_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.4.1.V
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A versucht beim Try mittels eines Place Kicks einen Punkt zu
            erzielen. Ein Team B-Spieler in der Endzone springt vor der
            Querlatte hoch und schlägt den fliegenden Ball weg. Der Ball geht
            in die Endzone und wird dort von Team A recovert.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Foul für Schlagen des Balles in der Endzone. Das Ergebnis des
                Downs ist ein Touchdown beim Try. Team A kann die Strafe
                ablehnen und erhält zwei Punkte zuerkannt.
            </p>
        </details>
    </div>
</article>
